force-app/main/default/objects/Tarea_del_Entregable__c/Tarea_del_Entregable__c.object-meta.xml
<CustomObject>
    <label>Tarea del Entregable</label>
    <nameField>
        <label>Tarea del Entregable</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tareas del Entregable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>