force-app/main/default/objects/Tarea_del_Entregable__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>