force-app/main/default/objects/Tarea_del_Entregable__c/fields/Entregable__c.field-meta.xml
<CustomField>
    <fullName>Entregable__c</fullName>
    <label>Entregable</label>
    <referenceTo>Subentregable__c</referenceTo>
    <relationshipLabel>Tareas Entregable</relationshipLabel>
    <relationshipName>Tareas_del_Entregable</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>