force-app/main/default/objects/Tarea_del_Entregable__c/fields/Esfuerzo_estimado__c.field-meta.xml
<CustomField>
    <fullName>Esfuerzo_estimado__c</fullName>
    <label>Esfuerzo estimado</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>