force-app/main/default/objects/Tarea_del_Entregable__c/fields/Esfuerzo_real__c.field-meta.xml
<CustomField>
    <fullName>Esfuerzo_real__c</fullName>
    <label>Esfuerzo real</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>